2009-02-09  Nick Garnett  <nickg@ecoscentric.com>

	* src/vectors.S (start): The loop to initialize BSS was using a
	BLS to terminate. This caused an extra zero to be stored beyond
	the end of __bss_end. Usually this is benign, but when __bss_end
	is at the very top of RAM, and the hardware generates an exception
	for illegal accesses, this can crash the program before it even
	starts. The fix is to use a BHI instructions and reverse the
	compare, which will terminate the loop 1 word earlier.

2009-02-02  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal_arm.cdl: add new architectural CFLAGS and LDFLAGS
	options.

2008-10-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/arm.ld: Discard C++ EH-related sections when we can't
	possibly support C++ EH (no CYGPKG_LIBSTDCXX).

2008-09-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/hal_mk_defs.c: Also export HAL_BREAKINST_THUMB and
	HAL_BREAKINST_ARM to asm.
	* src/arm.ld: Revise alignment yet further. Maintain ALIGN_LMA
	at original value, but define alignment for use in compliance
	with AAPCS. Expand explanatory comments.
	(SECTION_text): Comply with AAPCS alignment when inserting
	.ARM.extab and .ARM.exidx.	

2008-09-17  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/arm.ld: Rework alignment further to improve backward
	compatibility. Improve commenting on alignment issues.

2008-08-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/arm.ld: We need to be double-word aligned sometimes, so align
	LMA the same way too.

2008-07-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/hal_arm.cdl (CYGBLD_HAL_ARM_EABI): EABI has a different C++
	EH implementation, so don't let LIBSTDCXX use the default one.

2008-06-04  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/vectors.S: Correctly conditionalise overwriting (or not)
	of reset vector.

2008-05-28  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/hal_misc.c (CONSTRUCTORS_END): Fix fencepost error.

2008-05-19  Jonathan Larmour  <jifl@eCosCentric.com>
