@@ -1,3 +1,9 @@
+2009-02-14  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/vectors.S: Use .type xxx, function everywhere where
+	a global associated with code is defined. Otherwise objdump
+	treats it as data.
+
 2009-02-09  Nick Garnett  <nickg@ecoscentric.com>
 
 	* src/vectors.S (start): The loop to initialize BSS was using a
@@ -1788,7 +1794,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2009 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
